Bug 442291. Avoid the bitblit scrolling path completely if the area to be repainted is more than half the area to scroll. The goal is to avoid the synchronous repaint required by bitblitting (synchronicity is required to minimize the delay between blitting and repainting --- the intermediate display is very ugly). Also, make scroll-induced full-view repainting DEFERRED, so that it's less urgent and more apt to coalesce, so we drop frames more easily when painting can't keep up during scrolling. r+sr=bz